@@ -643,6 +643,16 @@ InvokeProcedureMethod(
 				 * call frame's lifetime). */
 
     /*
+     * If the interpreter was deleted, we just skip to the next thing in the
+     * chain.
+     */
+
+    if (Tcl_InterpDeleted(interp)) {
+	return TclNRObjectContextInvokeNext(interp, context, objc, objv,
+		Tcl_ObjectContextSkippedArgs(context));
+    }
+
+    /*
      * Allocate the special frame data.
      */
 
