@@ -1,3 +1,11 @@
+2008-09-01  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOMethod.c (InvokeProcedureMethod): 
+	* generic/tclOO.c (ObjectRenamedTrace): Arrange for only methods that
+	involve callbacks into the Tcl interpreter to be skipped when the
+	interpreter is being torn down. Allows the semantics of destructors in
+	a dying interpreter to be more useful when they're implemented in C.
+
 2008-08-29  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/Makefile.in: Ensure that all TclOO headers get installed.
